--- a/future.html
+++ b/future.html
@@ -20,21 +20,20 @@
 		<h1>My future</h1>
 
 		<h2>Goals</h2>
-		<ul class=”darkblue”>
+		<ul>
 			<li>McBride High school</li>
 			<li>Good grades in school</li>
 			<li>Get a good first job</li>
 					</ul>
 		<h2>Career interest</h2>
-	<ul class=”navyblue”>
+	<ul >
 		<li>Aviation</li>
 		<li>Pilot</li>
 		<li>Aerospace engineering</li>
 		<li>Astronaut</li>
 	</ul>
-			
-		<h2>College</h2>
-			<p class”darkblue”>Right now in 8th grade I have no idea where I want for college.  So I should like going into college in Long Beach just to keep it local then I choose the University.</p>
+			<h2>College</h2>
+		<p>Right now in 8th grade I have no idea where I want for college. So I should like going into college in Long Beach just to keep it local then I choose the University.</p>
 				
 	</body>
 </html>
