--- a/ATM.html
+++ b/ATM.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<header>
-		<img src="imagesource">
+		<img src="images/me.jpg">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="ATM.html">ATM</a></li>
