--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<header>
 		<img src="images/me.jpg" alt="Me" width="150">
 		<ul class="mainlist">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="ATM.html">ATM</a></li>
-			<li><a href="future.html">My Future</a></li>
+			<li class="mainlist"><a href="index.html">Home</a></li>
+			<li class="mainlist"><a href="ATM.html">ATM</a></li>
+			<li class="mainlist"><a href="future.html">My Future</a></li>
 		</ul>
 		</header>
  	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
