--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</ul>
 		<h2>Skills</h2>
 			<p>During the summer I do a junior lifeguard program they tought me CPR, water rescue,underwater rescue, spinal injury, swimming, and tower watching.In ATM program in school we learn to code websites in html and css which what I am doing right now. Also to 3D print and CAD which is designing houses on 3D program on computers.</p>
-			<img src="images/code.jpg" alt="code" width="250">
+			<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FTmY4TVdwcUhGZzg=w1680-h888-iv1" alt="code" width="250">
 			
 		<h2>Interests</h2>
 			<p>Since I was little I was always with legos and I want to step it up a notch. So what interests me the most is rockets and vehicles. Egineering is my top choice right now. Im doing my best to go to McBride high school and their great Egineering program where they make cars and boats and other cool things.</p>
