--- a/ATM.html
+++ b/ATM.html
@@ -6,11 +6,10 @@
 	</head>
 	<header>
 		<img src="images/me.jpg">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="ATM.html">ATM</a></li>
-			<li><a href="future.html">My Future</a></li>
-			<li><a href="">Bonus</a></li>
+		<ul class="mainlist">
+			<li class="mainlist"><a href="index.html">Home</a></li>
+			<li class="mainlist"><a href="ATM.html">ATM</a></li>
+			<li class="mainlist"><a href="future.html">My Future</a></li>
 		</ul>
 		</header>
 	<body>
