--- a/future.html
+++ b/future.html
@@ -6,10 +6,10 @@
 	</head>
 	<header>
 		<img src="imagesource">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="ATM.html">ATM</a></li>
-			<li><a href="future.html">My Future</a></li>
+		<ul class="mainlist">
+			<li class="mainlist"><a href="index.html">Home</a></li>
+			<li class="mainlist"><a href="ATM.html">ATM</a></li>
+			<li class="mainlist"><a href="future.html">My Future</a></li>
 		</ul>
 		</header>
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
