--- a/ATM.html
+++ b/ATM.html
@@ -12,7 +12,9 @@
 			<li class="mainlist"><a href="future.html">My Future</a></li>
 		</ul>
 		</header>
-		
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<body>
 		<h1>ATM experience</h1>
 		
