--- a/ATM.html
+++ b/ATM.html
@@ -29,7 +29,7 @@
 			<ul>
 				<li>CAD</li>
 				<li>photography</li>
-				<li>photshop</li>
+				<li>photoshop</li>
 				<li>illustrator</li>
 				<li>floorplanner</li>
 			</ul>
@@ -39,6 +39,8 @@
 				<li>Code</li>
 				<li>Websites</li>
 			</ul>
+		<h2>Reflection</h2>
+		<p>Overall this program helped me understand computers, programs, editing, and research. ATM did not just teach me about computers it also teaches things that are happenging in world with projects that we do. Without ATM I would never be able to do the things that I know how to do.This 3 year comitment is worth it. It is truely a one and only program in Long Beach.</p>
 		
 	</body>
 </html>
