--- a/future.html
+++ b/future.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<header>
-		<img src="imagesource">
+		<img src="">
 		<ul class="mainlist">
 			<li class="mainlist"><a href="index.html">Home</a></li>
 			<li class="mainlist"><a href="ATM.html">ATM</a></li>
