--- a/future.html
+++ b/future.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<header>
-		<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FSy13eGV6ZGNiNzQ=w1680-h888-iv2">
+		<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FSy13eGV6ZGNiNzQ=w1680-h888-iv2" width="150" alt="Me">
 		<ul class="mainlist">
 			<li class="mainlist"><a href="index.html">Home</a></li>
 			<li class="mainlist"><a href="ATM.html">ATM</a></li>
