--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<body>
 		<h1>Antonio's Blog</h1>
+		<article>
 		<h2>Hobbies</h2>
 		<ul>
 			<li>Biking</li>
@@ -24,16 +25,22 @@
 			<li>Carpentry(With Dad)</li>
 			<li>Swimming</li>
 		</ul>
+		</article>
+		<article>
 		<h2>Skills</h2>
 			<p>During the summer I do a junior lifeguard program they tought me CPR, water rescue,underwater rescue, spinal injury, swimming, and tower watching.In ATM program in school we learn to code websites in html and css which what I am doing right now. Also to 3D print and CAD which is designing houses on 3D program on computers.</p>
 			<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FTmY4TVdwcUhGZzg=w1680-h888-iv1" alt="code" width="250">
-			
+		</article>
+		<article>
 		<h2>Interests</h2>
 			<p>Since I was little I was always with legos and I want to step it up a notch. So what interests me the most is rockets and vehicles. Egineering is my top choice right now. Im doing my best to go to McBride high school and their great Egineering program where they make cars and boats and other cool things.</p>
 			<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FZjJWcFZ6eHluaW8=w1680-h888-iv1" alt="rocket-launch" width="250">
+		</article>
+		<article>
 		<h2>Family</h2>
 			<p>My parents are both from Mexico and moved to the United States to start a family. They bought a apartment and had my sister Miriam on December 30 2000. Then 3 years later my parents had me Antonio on September 14 2003. My parents raised us Catholic and I attend youth groups and mass on sundays. My sister and I do get along but it get of hand. I grew up like every other kid we moved to a house I attended Cleveland Elemetry and had friends. Still most of my friends are still friends. </p>
 			<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FUVdwYzdSSGNCNXM=w1680-h888-iv2" alt="My Family" width="250">
+		</article>
 		
 	</body>
 </html>
