--- a/future.html
+++ b/future.html
@@ -18,13 +18,15 @@
 
 	<body>
 		<h1>My future</h1>
-
+		<article>
 		<h2>Goals</h2>
 		<ul>
 			<li>McBride High school</li>
 			<li>Good grades in school</li>
 			<li>Get a good first job</li>
-					</ul>
+		</ul>
+		</article>
+		<article>
 		<h2>Career interest</h2>
 	<ul >
 		<li>Aviation</li>
@@ -32,9 +34,11 @@
 		<li>Aerospace engineering</li>
 		<li>Astronaut</li>
 	</ul>
+		</article>
+		<article>
 			<h2>College</h2>
 		<p>Right now in 8th grade I have no idea where I want for college. So I should like going into college in Long Beach just to keep it local then I choose the University.</p>
-				
+		</article>	
 	</body>
 </html>
 
