--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<header>
-		<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FSy13eGV6ZGNiNzQ=w1680-h888-iv2" alt="Me" width="150">
+		<img src="images/me.jpg" alt="Me" width="150">
 		<ul class="mainlist">
 			<li class="mainlist"><a href="index.html">Home</a></li>
 			<li class="mainlist"><a href="ATM.html">ATM</a></li>
@@ -28,7 +28,7 @@
 		<article>
 		<h2>Skills</h2>
 			<p>During the summer I do a junior lifeguard program they tought me CPR, water rescue,underwater rescue, spinal injury, swimming, and tower watching.In ATM program in school we learn to code websites in html and css which what I am doing right now. Also to 3D print and CAD which is designing houses on 3D program on computers.</p>
-			<img src="https://lh3.google.com/u/0/d/0BxdNWwxCXD0FTmY4TVdwcUhGZzg=w1680-h888-iv1" alt="code" width="250">
+			<img src="images/code.jpg" alt="code" width="250">
 		</article>
 		<article>
 		<h2>Interests</h2>
