--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<header>
-		<img src="images/me.JPG" alt="Me" width="150">
+		<img src="images/me.jpg" alt="Me" width="150">
 		<ul class="mainlist">
 			<li class="mainlist"><a href="index.html">Home</a></li>
 			<li class="mainlist"><a href="ATM.html">ATM</a></li>
