--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</article>
 		<article>
 		<h2>Family</h2>
-			<p>My parents are both from Mexico and moved to the United States to start a family. They bought a apartment and had my sister Miriam on December 30 2000. Then 3 years later my parents had me Antonio on September 14 2003. My parents raised us Catholic and I attend youth groups and mass on sundays. My sister and I do get along but it get of hand. I grew up like every other kid we moved to a house I attended Cleveland Elemetry and had friends. Still most of my friends are still friends. </p>
+			<p>My parents are both from Mexico and moved to the United States to start a family. They bought a apartment and had my sister Miriam on December 30 2000. Then 3 years later my parents had me Antonio on September 14 2003. My parents raised us Catholic and I attend youth groups and mass on sundays. My sister and I do get along but it could get out of hand. I grew up like every other kid we moved to a house I attended Cleveland Elemetry and had friends. Still most of my friends are still friends. </p>
 			<img src="images/family.jpg" alt="My Family" width="250">
 		</article>
 		
